--- a/src/Log2Console/packages.config
+++ b/src/Log2Console/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="log4net" version="2.0.8" targetFramework="net40" requireReinstallation="true" />
+  <package id="log4net" version="2.0.12" targetFramework="net461" />
   <package id="NetIde.ICSharpCode.TextEditor" version="3.3.7.6487" targetFramework="net40" />
 </packages>
